@@ -1,5 +1,8 @@
 2002-07-11  Jacob Smullyan  <smulloni@smullyan.org>
 
+	* SkunkWeb/SkunkWeb/confvars.py.in: adding.  Contains constants
+	produced by configure.
+
 	* configure.in, SkunkWeb/configure.in (and numerous other files):
 	changes to configuration so skunk actually works in other layouts.
 
